# fraud_detect_flow_NA

./: .env-example  .gitignore  pyproject.toml
output/: processing_verdict.json
src/fraud_detect_flow_session_5/: Untitled  main.py
src/fraud_detect_flow_session_5/crews/anomaly_crew/: anomaly_crew.py
src/fraud_detect_flow_session_5/crews/anomaly_crew/config/: agents.yaml  tasks.yaml
src/fraud_detect_flow_session_5/data/: check_deposit_batch_001.csv  nacha_batch_001.csv  wire_transfer_batch_001.csv
